[package]
name = "rust-agentic-rpa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = "0.8"
dirs = "6"
clap = { version = "4.5.58", features = ["derive"] }
dotenvy = "0.15.7"
eframe = "0.33.3"
global-hotkey = "0.7.0"
headless_chrome = "1.0.21"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
